# backend/docs/swagger.json
@@ -25,18 +25,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "array",
-                                "items": {
-                                    "type": "object",
-                                    "properties": {
-                                        "id": {
-                                            "type": "integer"
-                                        },
-                                        "name": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
+                                "$ref": "#/definitions/models.CityGetAllResponseItem"
                             }
                         }
                     },
@@ -76,7 +65,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.SuccessResponse"
+                            "$ref": "#/definitions/models.UserRegisterResponse"
                         }
                     },
                     "400": {
@@ -90,19 +79,22 @@
         }
     },
     "definitions": {
+        "models.CityGetAllResponseItem": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string"
-                }
-            }
-        },
-        "models.SuccessResponse": {
-            "type": "object",
-            "properties": {
-                "success": {
-                    "type": "boolean"
                 }
             }
         },
@@ -115,19 +107,7 @@
             ],
             "properties": {
                 "address": {
-                    "type": "object",
-                    "required": [
-                        "cityID",
-                        "street"
-                    ],
-                    "properties": {
-                        "cityID": {
-                            "type": "integer"
-                        },
-                        "street": {
-                            "type": "string"
-                        }
-                    }
+                    "$ref": "#/definitions/models.UserRegisterRequestAddress"
                 },
                 "age": {
                     "type": "integer"
@@ -141,6 +121,49 @@
                     "minLength": 6
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserRegisterRequestAddress": {
+            "type": "object",
+            "required": [
+                "cityID",
+                "street"
+            ],
+            "properties": {
+                "cityID": {
+                    "type": "string"
+                },
+                "street": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserRegisterResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "$ref": "#/definitions/models.UserRegisterResponseAddress"
+                },
+                "age": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserRegisterResponseAddress": {
+            "type": "object",
+            "properties": {
+                "cityID": {
+                    "type": "string"
+                },
+                "street": {
                     "type": "string"
                 }
             }
